Step 6: Added some more code around the user feature
