# src/main/java/com/trantorinc/wellnesstracker/model/User.java
@@ -14,6 +14,7 @@ import javax.validation.Valid;
 import javax.validation.constraints.*;
 import io.swagger.v3.oas.annotations.media.Schema;
 import org.springframework.data.relational.core.mapping.Table;
+import reactor.util.annotation.NonNull;
 
 
 import java.util.*;
@@ -28,89 +29,15 @@ import javax.annotation.Generated;
 @AllArgsConstructor
 @NoArgsConstructor
 @Table("app_users")
+@Data
 public class User {
-
+  @NonNull
   private UUID userId;
-
+  @NonNull
   private String name;
-
-  public User userId(UUID userId) {
-    this.userId = userId;
-    return this;
-  }
-
-  /**
-   * Get userId
-   * @return userId
-  */
-  
-  @Schema(name = "userId", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("userId")
-  public String getUserId() {
-    return userId.toString();
-  }
-
-  public void setUserId(UUID userId) {
-    this.userId = userId;
-  }
-
-  public User name(String name) {
-    this.name = name;
-    return this;
-  }
-
-  /**
-   * Get name
-   * @return name
-  */
-  
-  @Schema(name = "name", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("name")
-  public String getName() {
-    return name;
-  }
-
-  public void setName(String name) {
-    this.name = name;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    User user = (User) o;
-    return Objects.equals(this.userId, user.userId) &&
-        Objects.equals(this.name, user.name);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(userId, name);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class User {\n");
-    sb.append("    userId: ").append(toIndentedString(userId)).append("\n");
-    sb.append("    name: ").append(toIndentedString(name)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
+  @NonNull
+  private String email;
+  @NonNull
+  private String department;
 }
 
